--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,5 +7,6 @@ services:
     # de mi /app de nextjs local, vamos a pasarlo al workdir del container /app -> /app de nextjs generada  
     volumes:
       - ./frontend/app:/app/app
+      - ./frontend/app/components:/app/app/components
     stdin_open: true
     tty: true
