--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,8 @@ services:
     volumes:
       - ./frontend/app:/app/app
       - ./frontend/components:/app/components
+      - ./frontend/hooks:/app/hooks
+      - ./frontend/libs:/app/libs
     stdin_open: true
     tty: true
   backend:
