--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,9 +39,15 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
+    "msw": "^2.6.8",
     "postcss": "^8",
     "swagger-typescript-api": "^13.0.23",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
