--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,7 @@
 FROM node
 
+ENV NODE_ENV=production
+
 WORKDIR /app
 
 COPY package.json package-lock.json ./
@@ -8,8 +10,10 @@ RUN npm install
 
 COPY . .
 
+RUN if [ "$NODE_ENV" = "production" ]; then rm -rf /app/public/mockServiceWorker.js; fi
+
 RUN npm run build
 
 EXPOSE 3000
 
-CMD ["npm", "run", "dev"]
+CMD ["npm", "run", "start"]
