--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   mongo:
     image: mongo
@@ -16,6 +15,7 @@ services:
       - ./frontend/components:/app/components
       - ./frontend/hooks:/app/hooks
       - ./frontend/libs:/app/libs
+      - ./frontend/src:/app/src
     stdin_open: true
     tty: true
   backend:
