--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "dev": "node ./dist/server.js",
+    "dev": "nodemon --watch src --ext ts --exec ts-node src/server.ts",
     "start": "tsc && npm run dev"
   },
   "dependencies": {
@@ -19,7 +19,7 @@
     "@types/node": "^22.10.1",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.7",
-    "nodemon": "^3.1.7",
+    "nodemon": "^3.1.9",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
