--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,9 +26,11 @@
     "cmdk": "^1.0.0",
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.0",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "ui-box": "^5.4.1",
