Added swagger changes for api types / doc generation

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,8 +6,14 @@
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "resolveJsonModule": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "include": [
+    "src/**/*",
+    "src/swagger-output.json"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
