--- a/backend/package.json
+++ b/backend/package.json
@@ -3,15 +3,17 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "dev": "nodemon --watch src --ext ts --exec ts-node src/server.ts",
-    "start": "tsc && npm run dev"
+    "start": "tsc && npm run dev",
+    "generate-swagger": "ts-node src/config/swagger.ts"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "mongoose": "^8.8.3",
     "mongoose-to-swagger": "^1.5.1",
-    "nanoid": "^5.0.9"
+    "nanoid": "^5.0.9",
+    "swagger-autogen": "^2.23.7"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
