--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,12 +10,12 @@ services:
     ports:
       - "3000:3000"
     # de mi /app de nextjs local, vamos a pasarlo al workdir del container /app -> /app de nextjs generada  
-    volumes:
-      - ./frontend/pages:/app/pages
-      - ./frontend/components:/app/components
-      - ./frontend/hooks:/app/hooks
-      - ./frontend/libs:/app/libs
-      - ./frontend/src:/app/src
+    # volumes:
+    #   - ./frontend/pages:/app/pages
+    #   - ./frontend/components:/app/components
+    #   - ./frontend/hooks:/app/hooks
+    #   - ./frontend/libs:/app/libs
+    #   - ./frontend/src:/app/src
     stdin_open: true
     tty: true
   backend:
