--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,53 +1,23 @@
 {
-  "name": "frontbuild",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "generate-types": "swagger-typescript-api -p http://localhost:8080/swagger.json -o ./src/types/api",
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.1",
-    "@radix-ui/react-alert-dialog": "^1.1.4",
-    "@radix-ui/react-checkbox": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@tanstack/react-table": "^8.20.5",
-    "axios": "^1.7.8",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
-    "lucide-react": "^0.462.0",
-    "next": "15.0.3",
-    "next-themes": "^0.4.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.54.0",
-    "sonner": "^1.7.1",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7",
-    "ui-box": "^5.4.1",
-    "zod": "^3.23.8"
+    "@reduxjs/toolkit": "^2.2.0",
+    "next": "latest",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
-    "msw": "^2.6.8",
-    "postcss": "^8",
-    "swagger-typescript-api": "^13.0.23",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@types/node": "20.2.5",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "^18.2.18",
+    "msw": "^2.7.0",
+    "typescript": "^5.3.3"
   },
   "msw": {
     "workerDirectory": [
