--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -14,6 +14,7 @@ jobs:
       with:
         node-version: lts/*
     - name: Install dependencies
+      working-directory: ./frontend
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
