--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -9,20 +9,22 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v4  # Descarga el código del repositorio
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
     - name: Install dependencies
-      working-directory: ./frontend
-      run: npm ci
+      working-directory: ./frontend  # Cambia al directorio /frontend
+      run: npm ci  # Instala dependencias en /frontend
     - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
+      working-directory: ./frontend  # Cambia al directorio /frontend
+      run: npx playwright install --with-deps  # Instala Playwright en /frontend
     - name: Run Playwright tests
-      run: npx playwright test
+      working-directory: ./frontend/ui-tests  # Cambia al directorio /frontend
+      run: npx playwright test  # Ejecuta las pruebas en /frontend
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
         name: playwright-report
-        path: playwright-report/
+        path: frontend/playwright-report/  # Asegúrate de que la ruta sea correcta
         retention-days: 30
