--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -9,22 +9,25 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4  # Descarga el código del repositorio
+    - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
     - name: Install dependencies
-      working-directory: ./frontend  # Cambia al directorio /frontend
-      run: npm ci  # Instala dependencias en /frontend
+      working-directory: ./frontend
+      run: npm ci
     - name: Install Playwright Browsers
-      working-directory: ./frontend  # Cambia al directorio /frontend
-      run: npx playwright install --with-deps  # Instala Playwright en /frontend
+      working-directory: ./frontend
+      run: npx playwright install --with-deps
+    - name: Start the application
+      working-directory: ./frontend
+      run: npm start &  # Inicia la aplicación en segundo plano
     - name: Run Playwright tests
-      working-directory: ./frontend/ui-tests  # Cambia al directorio /frontend
-      run: npx playwright test  # Ejecuta las pruebas en /frontend
+      working-directory: ./frontend/ui-tests
+      run: npx playwright test
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
         name: playwright-report
-        path: frontend/playwright-report/  # Asegúrate de que la ruta sea correcta
+        path: frontend/playwright-report/
         retention-days: 30
