--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "test:e2e": "npx playwright test",
     "test:all": "npm run test:unit && npm run test:e2e",
     "test:watch": "jest --watch",
-    "generate-types": "swagger-typescript-api -p http://localhost:8080/swagger.json -o ./app/types/api"
+    "generate-types": "swagger-typescript-api -p http://localhost:8080/swagger.json -o ./app/types/api",
+    "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -54,6 +55,8 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.21.0",
+    "eslint-config-next": "15.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "msw": "^2.7.0",
