--- a/frontend/.github/workflows/playwright.yml
+++ b/frontend/.github/workflows/playwright.yml
@@ -6,6 +6,7 @@ on:
     branches: [ main, master ]
 jobs:
   frontbuild-ui-tests:
+    name: Frontend UI Tests
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
@@ -24,4 +25,4 @@ jobs:
       with:
         name: playwright-report
         path: playwright-report/
-        retention-days: 29
+        retention-days: 30
