--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@chromatic-com/playwright": "^0.12.0",
     "@next/env": "^15.2.1",
     "@playwright/test": "^1.50.1",
     "@testing-library/dom": "^10.4.0",
@@ -56,6 +57,7 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "autoprefixer": "^10.4.20",
+    "chromatic": "^11.27.0",
     "eslint": "^9.21.0",
     "eslint-config-next": "15.1.7",
     "jest": "^29.7.0",
