--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           node-version: 22.12.0
       - name: Install dependencies
+        working-directory: ./frontend
         # ⚠️ See your package manager's documentation for the correct command to install dependencies in a CI environment.
         run: npm ci
       - name: Run Chromatic
