--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -11,16 +11,22 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
       - uses: actions/setup-node@v4
         with:
           node-version: 22.12.0
+
       - name: Install dependencies
         working-directory: ./frontend
-        # ⚠️ See your package manager's documentation for the correct command to install dependencies in a CI environment.
         run: npm ci
+
+      - name: Build Next.js (with export)
+        working-directory: ./frontend
+        run: npm run build  # Genera los archivos estáticos en `out`
+
       - name: Run Chromatic
         uses: chromaui/action@latest
         with:
-          # ⚠️ Make sure to configure a `CHROMATIC_PROJECT_TOKEN` repository secret
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+          storybookBuildDir: ./frontend/out  # Usa la carpeta de salida generada por `next build`
           workingDir: ./frontend
