--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -22,6 +22,10 @@ jobs:
       working-directory: ./frontend
       run: npm ci
 
+    - name: Set environment variables
+      run: echo "TEST_API_URL=${{ secrets.TEST_API_URL }}" >> $GITHUB_ENV
+      working-directory: ./frontend
+
     # 4. Ejecuta el linter
     - name: Run Unit Tests
       working-directory: ./frontend
