--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -23,7 +23,9 @@ jobs:
       run: npm ci
 
     - name: Set environment variables
-      run: echo "TEST_API_URL=${{ secrets.TEST_API_URL }}" >> $GITHUB_ENV
+      run: |
+        echo "TEST_API_URL=${{ secrets.TEST_API_URL }}" >> $GITHUB_ENV
+        echo "NEXT_PUBLIC_FRONTBUILD_API_URL=${{ secrets.NEXT_PUBLIC_FRONTBUILD_API_URL }}" >> $GITHUB_ENV
       working-directory: ./frontend
 
     # 4. Ejecuta el linter
