--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-collapsible": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.4",
@@ -33,7 +34,7 @@
     "cmdk": "^1.0.0",
     "jest-fixed-jsdom": "^0.0.9",
     "lucide-react": "^0.469.0",
-    "next": "latest",
+    "next": "^15.2.4",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -44,6 +45,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "ui-box": "^5.4.1",
+    "usehooks-ts": "^3.1.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
