--- a/.github/workflows/code_quality_checks.yml
+++ b/.github/workflows/code_quality_checks.yml
@@ -3,22 +3,7 @@ name: Code Quality Checks
 on: [push, pull_request]
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./frontend
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '18.x'
-      - name: Install Dependencies
-        run: npm install
-      - name: Run ESLint
-        run: npm run lint
-
-  test:
+  test-coverage-codecov:
     runs-on: ubuntu-latest
     defaults:
       run:
