--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,17 +28,23 @@
     "@reduxjs/toolkit": "^2.2.0",
     "@tanstack/react-table": "^8.20.6",
     "@testing-library/user-event": "^14.6.1",
+    "accept-language": "^3.0.20",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "i18next": "^25.0.2",
+    "i18next-browser-languagedetector": "^8.1.0",
+    "i18next-resources-to-backend": "^1.2.1",
     "jest-fixed-jsdom": "^0.0.9",
     "lucide-react": "^0.469.0",
     "next": "^15.2.4",
+    "next-i18next": "^15.4.2",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
+    "react-i18next": "^15.5.1",
     "react-redux": "^9.1.0",
     "sonner": "^1.7.1",
     "swagger-typescript-api": "^13.0.23",
@@ -49,6 +55,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.25.1",
     "@next/env": "^15.2.1",
     "@playwright/test": "^1.50.1",
     "@testing-library/dom": "^10.4.0",
@@ -59,8 +66,10 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.21.0",
+    "eslint": "^9.25.1",
     "eslint-config-next": "15.1.7",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "msw": "^2.7.0",
@@ -68,7 +77,8 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.31.1"
   },
   "msw": {
     "workerDirectory": [
