--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "jest-fixed-jsdom": "^0.0.9",
     "lucide-react": "^0.469.0",
     "next": "^15.2.4",
+    "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
