--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -26,6 +26,7 @@ jobs:
       run: |
         echo "TEST_API_URL=${{ secrets.TEST_API_URL }}" >> $GITHUB_ENV
         echo "NEXT_PUBLIC_FRONTBUILD_API_URL=${{ secrets.NEXT_PUBLIC_FRONTBUILD_API_URL }}" >> $GITHUB_ENV
+        echo "NEXT_PUBLIC_ENABLE_MSW=${{ secrets.NEXT_PUBLIC_ENABLE_MSW }}" >> $GITHUB_ENV
       working-directory: ./frontend
 
     # 4. Ejecuta el linter
