--- a/.github/workflows/code_quality_checks.yml
+++ b/.github/workflows/code_quality_checks.yml
@@ -19,6 +19,7 @@ jobs:
         run: |
           echo "TEST_API_URL=${{ secrets.TEST_API_URL }}" >> $GITHUB_ENV
           echo "NEXT_PUBLIC_FRONTBUILD_API_URL=${{ secrets.NEXT_PUBLIC_FRONTBUILD_API_URL }}" >> $GITHUB_ENV
+          echo "NEXT_PUBLIC_ENABLE_MSW=${{ secrets.NEXT_PUBLIC_ENABLE_MSW }}" >> $GITHUB_ENV
           echo "NEXT_PUBLIC_FRONTBUILD_HZ_SERVER_URL=${{ secrets.NEXT_PUBLIC_FRONTBUILD_HZ_SERVER_URL }}" >> $GITHUB_ENV
       - name: Run Tests with Coverage
         run: npm test -- --coverage
