--- a/.github/workflows/code_quality_checks.yml
+++ b/.github/workflows/code_quality_checks.yml
@@ -3,7 +3,7 @@ name: Code Quality Checks
 on: [push, pull_request]
 
 jobs:
-  test-coverage-codecov:
+  code-coverage-codecov:
     runs-on: ubuntu-latest
     defaults:
       run:
