--- a/.github/workflows/code_quality_checks.yml
+++ b/.github/workflows/code_quality_checks.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: "18.x"
       - name: Install Dependencies
-        run: npm install
+        run: npm ci
       - name: Set environment variabless
         run: |
           echo "TEST_API_URL=${{ secrets.TEST_API_URL }}" >> $GITHUB_ENV
