--- a/.github/workflows/next_lint.yml
+++ b/.github/workflows/next_lint.yml
@@ -1,28 +1,28 @@
 name: Lint Checks
 on:
   push:
-    branches: [ main, master ]
+    branches: [main]
   pull_request:
-    branches: [ main, master ]
+    branches: [main]
 jobs:
   lint:
-    timeout-minutes: 30
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./frontend
     steps:
-    # 1. Descarga el código del repositorio
-    - uses: actions/checkout@v4
+      # 1. Descarga el código del repositorio
+      - uses: actions/checkout@v4
 
-    # 2. Configura Node.js
-    - uses: actions/setup-node@v4
-      with:
-        node-version: lts/*
+      # 2. Configura Node.js
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
 
-    # 3. Instala dependencias en /frontend
-    - name: Install dependencies
-      working-directory: ./frontend
-      run: npm ci
+      # 3. Instala dependencias en /frontend
+      - name: Install dependencies
+        run: npm ci
 
-    # 4. Ejecuta el linter
-    - name: Run Lint
-      working-directory: ./frontend
-      run: npm run lint
+      # 4. Ejecuta el linter
+      - name: Run Lint
+        run: npm run lint
