--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,41 +1,40 @@
 name: Playwright Tests
 on:
   push:
-    branches: [ main, master ]
+    branches: [main]
   pull_request:
-    branches: [ main, master ]
+    branches: [main]
 jobs:
   frontbuild-ui-tests:
-    timeout-minutes: 60
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./frontend
     steps:
-    # 1. Descarga el código del repositorio
-    - uses: actions/checkout@v4
+      # 1. Descarga el código del repositorio
+      - uses: actions/checkout@v4
 
-    # 2. Configura Node.js
-    - uses: actions/setup-node@v4
-      with:
-        node-version: lts/*
+      # 2. Configura Node.js
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
 
-    # 3. Instala dependencias en /frontend
-    - name: Install dependencies
-      working-directory: ./frontend
-      run: npm ci
+      # 3. Instala dependencias en /frontend
+      - name: Install dependencies
+        run: npm ci
 
-    # 4. Instala los navegadores de Playwright
-    - name: Install Playwright Browsers
-      working-directory: ./frontend
-      run: npx playwright install --with-deps chromium
+      # 4. Instala los navegadores de Playwright
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps chromium
 
-    # 5. Ejecuta las pruebas de Playwright
-    - name: Run Playwright tests
-      working-directory: ./frontend
-      run: npx playwright test
+      # 5. Ejecuta las pruebas de Playwright
+      - name: Run Playwright tests
+        run: npx playwright test
 
-    # 6. Sube el reporte de Playwright como artefacto
-    - uses: actions/upload-artifact@v4
-      if: ${{ !cancelled() }}
-      with:
-        name: playwright-report
-        path: frontend/playwright-report/
-        retention-days: 30
+      # 6. Sube el reporte de Playwright como artefacto
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: frontend/playwright-report/
+          retention-days: 30
