--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.2.5",
     "@reduxjs/toolkit": "^2.2.0",
     "@tanstack/react-table": "^8.20.6",
     "@testing-library/user-event": "^14.6.1",
