--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -28,6 +28,7 @@ jobs:
           echo "TEST_API_URL=${{ secrets.TEST_API_URL }}" >> $GITHUB_ENV
           echo "NEXT_PUBLIC_FRONTBUILD_API_URL=${{ secrets.NEXT_PUBLIC_FRONTBUILD_API_URL }}" >> $GITHUB_ENV
           echo "NEXT_PUBLIC_ENABLE_MSW=${{ secrets.NEXT_PUBLIC_ENABLE_MSW }}" >> $GITHUB_ENV
+          echo "NEXT_PUBLIC_FRONTBUILD_HZ_SERVER_URL=${{secrets.NEXT_PUBLIC_FRONTBUILD_HZ_SERVER_URL}}" >> $GITHUB_ENV
 
       # 4. Ejecuta el linter
       - name: Run Unit Tests
