--- a/frontend/package.json
+++ b/frontend/package.json
@@ -70,6 +70,8 @@
     "msw": "^2.7.0",
     "next-router-mock": "^0.9.13",
     "postcss": "^8.4.49",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
