--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.2.5",
     "@reduxjs/toolkit": "^2.2.0",
+    "@tailwindcss/postcss": "^4.1.14",
     "@tanstack/react-table": "^8.20.6",
     "@testing-library/user-event": "^14.6.1",
     "axios": "^1.7.9",
@@ -47,7 +48,9 @@
     "sonner": "^1.7.1",
     "swagger-typescript-api": "^13.0.23",
     "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^4.1.14",
     "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.4.0",
     "ui-box": "^5.4.1",
     "usehooks-ts": "^3.1.1",
     "zod": "^3.24.1"
@@ -69,10 +72,9 @@
     "jest-environment-jsdom": "^29.7.0",
     "msw": "^2.7.0",
     "next-router-mock": "^0.9.13",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   },
