--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/checkout@v4
 
       # 2. Configura Node.js
+      # TODO: check what brokes with new version of node with tests
+      # lts /* toma la ultima
       - uses: actions/setup-node@v4
         with:
           node-version: lts/jod
