--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -17,7 +17,7 @@ jobs:
       # 2. Configura Node.js
       - uses: actions/setup-node@v4
         with:
-          node-version: lts/jod
+          node-version: lts/*
 
       # 3. Instala dependencias en /frontend
       - name: Install dependencies
