--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "test:all": "npm run test:unit && npm run test:e2e",
     "test:watch": "jest --watch",
     "generate-types": "swagger-typescript-api -p http://localhost:8080/swagger.json -o ./app/types/api",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@google/genai": "^1.4.0",
@@ -66,8 +66,8 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.21.0",
-    "eslint-config-next": "15.1.7",
+    "eslint": "^9.39.0",
+    "eslint-config-next": "^15.5.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "msw": "^2.11.6",
