--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,8 +41,8 @@
     "next": "^16.0.1",
     "next-intl": "^4.4.0",
     "next-themes": "^0.4.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.1.0",
     "sonner": "^1.7.1",
