--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,6 @@
 version: 2
 updates:
   - package-ecosystem: "npm"
-    directory: "/frontend" # Location of package manifests
+    directory: "./frontend" # Location of package manifests
     schedule:
       interval: "weekly"
