--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "next dev --webpack",
     "build": "next build",
     "start": "next start",
     "update:snapshots": "jest --updateSnapshot",
@@ -39,7 +39,7 @@
     "jest-fixed-jsdom": "^0.0.10",
     "lucide-react": "^0.554.0",
     "next": "^16.0.4",
-    "next-intl": "^4.4.0",
+    "next-intl": "^4.5.5",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
