--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cmdk": "^1.0.0",
     "jest-fixed-jsdom": "^0.0.10",
     "lucide-react": "^0.554.0",
+    "motion": "^12.23.25",
     "next": "^16.0.4",
     "next-intl": "^4.5.5",
     "next-themes": "^0.4.6",
