--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "autoprefixer": "^10.4.22",
+    "baseline-browser-mapping": "^2.9.11",
     "eslint": "^9.39.0",
     "eslint-config-next": "^15.5.6",
     "jest": "^29.7.0",
