--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -20,7 +20,7 @@ jobs:
 
       # 3. Instala dependencias en /frontend
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --legacy-peer-deps
 
       # 4. Instala los navegadores de Playwright
       - name: Install Playwright Browsers
