added test workaround

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -28,6 +28,10 @@ jobs:
 
       # 5. Ejecuta las pruebas de Playwright
       - name: Run Playwright tests
+        env:
+          # 👇 Variables de entorno desde GitHub Secrets
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          # Agrega más según necesites
         run: npx playwright test
 
       # 6. Sube el reporte de Playwright como artefacto
